fix: single-post's image on mobile phone

--- a/mysketchytheme/styles/home-blog.css
+++ b/mysketchytheme/styles/home-blog.css
@@ -25,7 +25,7 @@
 }
 .post-card_image_container{
     width: 100%;
-    height: 180px;
+    height: auto;
 }
 
 .post-card a{
