--- a/mysketchytheme/styles/single-post.css
+++ b/mysketchytheme/styles/single-post.css
@@ -15,12 +15,13 @@
         align-items: center;
     }
     #post-head_img{
-        width: 100vw;
-        max-height:40vh;
+        width: 100%;
+        /*height:40vh;*/
         overflow: hidden;
     }
     #post-head_img img{
-        width: 100vw;
+        width: 100%;
+        height:auto;
     }
 }
 
@@ -37,7 +38,6 @@
         height:55vh;
         overflow: hidden;
     }
-
     #title-excerpt-date_container{
         padding: 2rem;
         background-color: rgba(245, 245, 220, 0.6);
